# meteostation_v1

./: .gitignore
app/: Cargo.toml
app/.cargo/: config
app/src/: config.rs  lib.rs  main.rs
app/src/drivers/: lcd.rs  mod.rs
app/src/peripherals/: mod.rs  usb.rs
app/src/system/: clocks.rs  config.rs  delay.rs  i2c.rs  mod.rs  systick.rs  timer.rs  usb.rs
boot/: Cargo.toml
boot/src/: main.rs
boot/src/system/: systick.rs  timer.rs
share_lib/: Cargo.toml
share_lib/src/: lib.rs
