[package]
name = "app"
version = "0.1.0"
authors = ["afedoseev <afedoseev@AFEDOSEEV>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2"
embedded-hal = "0.2"
nb = "1.0"
usb-device = "0.2.4"
usbd-serial = "0.1"
usbd-webusb = "1.0.0"
heapless = "0.6"
hd44780-driver = "0.4"

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[profile.dev.package."*"]
codegen-units = 1
debug = true
opt-level = 3

[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 3
lto = false

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = "s"
